# tendencia

./: pyproject.toml
.github/workflows/: main.yml
tendencia/: __main__.py  cli.py  colormap.py  inspect_calculator.py  pearson_calculator.py  remap.py  trend_calculator.py  utils.py
tests/: test_tendencia.py
