[tool.poetry]
name = "tendencia"
version = "0.1.7"
description = ""
authors = ["chenn <chenn@gisuni.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
tendencia = "tendencia.cli:cli"
